# MySQLOO

./: .gitignore  .travis.yml  BuildProjects.bat  BuildProjects.lua  BuildProjects.sh  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  appveyor.yml  build.ps1  build.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  integration-test.yml
Examples/: database.lua  multi_parameters.lua  multi_results.lua  prepared_query.lua  query.lua  transactions.lua
GmodLUA/: CMakeLists.txt
GmodLUA/GarrysMod/Lua/: Interface.h  LuaBase.h  SourceCompat.h  Types.h  UserData.h
GmodLUA/include/GarrysMod/Lua/: Interface.h  LuaBase.h  SourceCompat.h  Types.h  UserData.h
IntegrationTest/: README.md
IntegrationTest/lua/autorun/server/: init.lua
IntegrationTest/lua/mysqloo/: init.lua  setup.lua  testframework.lua
IntegrationTest/lua/mysqloo/tests/: basic_mysql_test.lua  database_tests.lua  prepared_query_tests.lua  query_tests.lua  transaction_test.lua
MySQL/include/: mariadb_version.h  mysql_version.h  mysqld_error.h  mysqlx_ername.h  mysqlx_error.h
MySQL/lib/windows/: libmariadb.lib  mariadbclient.lib
MySQL/lib64/windows/: libmariadb.lib  libmysql.lib  mariadbclient.lib
MySQLOO/include/: BlockingQueue.h  Database.h  IQuery.h  Logger.h  LuaObjectBase.h  MySQLHeader.h  PingQuery.h  PreparedQuery.h  Query.h  QueryData.h  ResultData.h  Transaction.h
MySQLOO/include/lua/: LuaDatabase.h
MySQLOO/source/: Database.cpp  GMModule.cpp  IQuery.cpp  Logger.cpp  LuaObjectBase.cpp  PingQuery.cpp  PreparedQuery.cpp  Query.cpp  ResultData.cpp  Transaction.cpp
lua/: connectionpool.lua  mysqloolib.lua  tmysql4.lua
src/: BlockingQueue.h  Main.cpp
src/lua/: GMModule.cpp  LuaDatabase.cpp  LuaDatabase.h  LuaIQuery.cpp  LuaIQuery.h  LuaObject.cpp  LuaObject.h  LuaPreparedQuery.cpp  LuaPreparedQuery.h  LuaQuery.cpp  LuaQuery.h  LuaTransaction.cpp  LuaTransaction.h
src/mysql/: Database.cpp  Database.h  IQuery.cpp  IQuery.h  MySQLHeader.h  MySQLOOException.h  PingQuery.cpp  PingQuery.h  PreparedQuery.cpp  PreparedQuery.h  Query.cpp  Query.h  ResultData.cpp  ResultData.h  StatementHandle.h  Transaction.cpp  Transaction.h
